# rendaz

./: .gitignore  README.md  example.env  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run
dazcms/: dbrouter.py  models.py
dazcms/db/: LICENSE
dazcms/db/backends/legacy_postgresql/: client.py  introspection.py
production/: models.py
production/migrations/: 0001_initial.py
production/tests/: Sphere-compressed.duf  Sphere-uncompressed.duf  test_dazfile.py
rendaz/: asgi.py  daztools.py  settings.py  urls.py  wsgi.py
rendaz/dazcms/: apps.py
rendaz/production/: __init__.py  admin.py  apps.py  commands.py  models.py
rendaz/production/management/commands/: decompress.py
rendaz/production/migrations/: 0002_auto_20201227_1733.py
rendaz/production/tests/: test_dazfile.py
rendaz/tests/: Manifest.dsx  Supplement.dsx  test_daztools.py
